--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivHomeTeam"
             android:layout_width="@dimen/team_image_size"
             android:layout_height="@dimen/team_image_size"
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvHomeTeamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,10 +31,20 @@
             app:layout_constraintEnd_toEndOf="@+id/ivHomeTeam"
             app:layout_constraintStart_toStartOf="@+id/ivHomeTeam"
             app:layout_constraintTop_toBottomOf="@+id/ivHomeTeam"
-            app:layout_constraintVertical_bias="1.0"
             tools:text="Home Team" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvHomeTeamScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
+            app:layout_constraintEnd_toStartOf="@+id/tvVersus"
+            app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
+            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam"
+            tools:text="99" />
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvVersus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,10 +52,9 @@
             app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam"
-            app:layout_constraintVertical_bias="0.495" />
+            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivAwayTeam"
             android:layout_width="@dimen/team_image_size"
             android:layout_height="@dimen/team_image_size"
@@ -56,7 +65,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvAwayTeamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,7 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ivAwayTeam"
             tools:text="Away Team" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvAwayTeamScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,17 +84,6 @@
             app:layout_constraintEnd_toStartOf="@+id/ivAwayTeam"
             app:layout_constraintStart_toEndOf="@+id/tvVersus"
             app:layout_constraintTop_toTopOf="@+id/ivAwayTeam"
-            tools:text="99" />
-
-        <TextView
-            android:id="@+id/tvHomeTeamScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintBottom_toBottomOf="@+id/ivHomeTeam"
-            app:layout_constraintEnd_toStartOf="@+id/tvVersus"
-            app:layout_constraintStart_toEndOf="@+id/ivHomeTeam"
-            app:layout_constraintTop_toTopOf="@+id/ivHomeTeam"
             tools:text="99" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
