--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_200">#b39ddb</color>
-    <color name="primary_500">#673ab7</color>
-    <color name="primary_700">#512da8</color>
+    <color name="primary_200">#B39DDB</color>
+    <color name="primary_500">#673AB7</color>
+    <color name="primary_700">#512DA8</color>
 
     <color name="secondary_200">#EF9A9A</color>
     <color name="secondary_700">#D32F2F</color>
